Support -fvisibility=hidden option in CMake script
The option is passed only if it is supported and the shared library
build is requested. The functionality is similar to that of configure.

* CMakeLists.txt [BUILD_SHARED_LIBS] (HAVE_FLAG_F_VISIBILITY_HIDDEN):
Check "-fvisibility=hidden" C compiler flag and set the variable
accordingly.
* CMakeLists.txt [BUILD_SHARED_LIBS && HAVE_FLAG_F_VISIBILITY_HIDDEN]
(GC_VISIBILITY_HIDDEN_SET): Define macro.
* CMakeLists.txt [BUILD_SHARED_LIBS && !HAVE_FLAG_F_VISIBILITY_HIDDEN]
(GC_NO_VISIBILITY): Likewise.
* CMakeLists.txt [BUILD_SHARED_LIBS && HAVE_FLAG_F_VISIBILITY_HIDDEN]:
Add "-fvisibility=hidden" compile option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -310,6 +310,14 @@ endif()
 
 if (BUILD_SHARED_LIBS)
   add_definitions("-DGC_DLL")
+  # Pass -fvisibility=hidden option if supported.
+  check_c_compiler_flag(-fvisibility=hidden HAVE_FLAG_F_VISIBILITY_HIDDEN)
+  if (HAVE_FLAG_F_VISIBILITY_HIDDEN)
+    add_definitions("-DGC_VISIBILITY_HIDDEN_SET")
+    add_compile_options(-fvisibility=hidden)
+  else()
+    add_definitions("-DGC_NO_VISIBILITY")
+  endif()
 else()
   add_definitions("-DGC_NOT_DLL")
   if (WIN32)
