Pass -no-undefined linker flag if building shared libraries (CMake)
Declare that the libraries do not refer to external symbols.
Same as in configure script.

* CMakeLists.txt [BUILD_SHARED_LIBS] (HAVE_FLAG_WL_NO_UNDEFINED): Check
C compiler supports "-Wl,--no-undefined" option, set the variable
accordingly.
* CMakeLists.txt [BUILD_SHARED_LIBS && HAVE_FLAG_WL_NO_UNDEFINED] (gc):
Specify "-Wl,--no-undefined" link option (by target_link_libraries);
add TODO item.
* CMakeLists.txt [BUILD_SHARED_LIBS && HAVE_FLAG_WL_NO_UNDEFINED
&& enable_cplusplus] (gccpp): Likewise.
* CMakeLists.txt [BUILD_SHARED_LIBS && HAVE_FLAG_WL_NO_UNDEFINED
&& enable_cplusplus && enable_throw_bad_alloc_library] (gctba):
Likewise.
* CMakeLists.txt [BUILD_SHARED_LIBS && HAVE_FLAG_WL_NO_UNDEFINED
&& build_cord] (cord): Likewise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -327,6 +327,7 @@ if (BUILD_SHARED_LIBS)
   else()
     add_definitions("-DGC_NO_VISIBILITY")
   endif()
+  check_c_compiler_flag(-Wl,--no-undefined HAVE_FLAG_WL_NO_UNDEFINED)
 else()
   add_definitions("-DGC_NOT_DLL")
   if (WIN32)
@@ -440,6 +441,21 @@ if (build_cord)
           ARCHIVE DESTINATION lib
           RUNTIME DESTINATION bin
           INCLUDES DESTINATION include)
+endif()
+
+if (BUILD_SHARED_LIBS AND HAVE_FLAG_WL_NO_UNDEFINED)
+  # Declare that the libraries do not refer to external symbols.
+  # TODO: use add_link_options() when cmake_minimum_required > 3.13
+  target_link_libraries(gc PRIVATE -Wl,--no-undefined)
+  if (enable_cplusplus)
+    target_link_libraries(gccpp PRIVATE -Wl,--no-undefined)
+    if (enable_throw_bad_alloc_library)
+      target_link_libraries(gctba PRIVATE -Wl,--no-undefined)
+    endif(enable_throw_bad_alloc_library)
+  endif(enable_cplusplus)
+  if (build_cord)
+    target_link_libraries(cord PRIVATE -Wl,--no-undefined)
+  endif(build_cord)
 endif()
 
 install(TARGETS gc EXPORT gcExports
